<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">Check the status</string>

    <string name="button_name">Download</string>
    <string name="button_loading">We are loading </string>
    <string name="button_completed">OK</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="download_select_file">Please select a file to download</string>
    <string name="download_option_glide">Glide - Image Loading Library by BumpTech</string>
    <string name="download_option_udacity">LoadApp - Current repository by Udacity</string>
    <string name="download_option_retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="download_files_complete">Download files complete</string>

    <string name="download_success">Success</string>
    <string name="download_fail">Fail</string>

    <string name="detail_filename">File name:</string>
    <string name="detail_status">Status:</string>
</resources>
