<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/app_description"
        android:id="@+id/cloud_download_iv"
        android:layout_height="150dp"
        android:layout_width="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_cloud_download_24"
        tools:ignore="ImageContrastCheck" />

    <RadioGroup
        android:id="@+id/download_options_rg"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/custom_button"
        app:layout_constraintEnd_toEndOf="@+id/custom_button"
        app:layout_constraintStart_toStartOf="@+id/custom_button"
        app:layout_constraintTop_toBottomOf="@+id/cloud_download_iv">

        <RadioButton
            android:id="@+id/download_glide_rb"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/download_option_glide"
            style="@style/RadioButton" />

        <RadioButton
            android:id="@+id/download_udacity_rb"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/download_option_udacity"
            style="@style/RadioButton"/>

        <RadioButton
            android:id="@+id/download_retrofit_rb"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/download_option_retrofit"
            style="@style/RadioButton"/>
    </RadioGroup>

    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:layout_width="0dp"
        app:buttonTextColor="@color/white"
        app:buttonBackgroundColor="@color/colorPrimary"
        app:buttonLoadingColor="@color/colorPrimaryDark"
        app:buttonCircleColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>